# Hyperliquid_Archiver

./: .env.example  Dockerfile  pyproject.toml
app/: config.py
app/hyperliquid/: websocket_recorder.py
app/spool/: durable_spool.py
app/storage/: object_store.py
app/tools/: validate_data_shape.py
app/utils/: time.py
app/workers/: recorder.py  validator.py  writer.py
app/writers/: brut_writer.py
xyz-tradfi-archiver/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
xyz-tradfi-archiver/app/: cli.py  config.py  logging_config.py
xyz-tradfi-archiver/app/domain/: events.py
xyz-tradfi-archiver/app/hyperliquid/: driver.py  symbols.py  websocket_recorder.py
xyz-tradfi-archiver/app/spool/: durable_spool.py
xyz-tradfi-archiver/app/storage/: metadata_store.py  object_store.py
xyz-tradfi-archiver/app/utils/: json.py  time.py
xyz-tradfi-archiver/app/workers/: recorder.py  validator.py  writer.py
xyz-tradfi-archiver/app/writers/: brut_writer.py  manifest_writer.py  parquet_writer.py
