[project]
name = "xyz-tradfi-archiver"
version = "0.1.0"
description = "Standalone Hyperliquid XYZ tradfi perpetuals archiver"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34.0",
  "lz4>=4.3.3",
  "requests>=2.32.0",
  "websocket-client>=1.8.0",
]

[project.scripts]
xyz-archiver = "app.cli:main"

[tool.ruff]
line-length = 110

[tool.pyright]
typeCheckingMode = "strict"